# universal_retriever

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md  README.rst  index.html  params.json
.github/workflows/: stale.yml
cmake/: UniversalRetrieverConfig.cmake  compiler_options.cmake
doc/: CMakeLists.txt  Doxyfile.in
include/: BackEndInterface.h  BackendInterface.h  CMakeLists.txt  FrontEnd.h  Frontend.h  HandlerInfo.h  HandlerMap.h  UniversalRetrieverExceptions.h  any.h
src/: BackendInterface.cpp  CMakeLists.txt  FrontEnd.cpp  Frontend.cpp  HandlerMap.cpp
test/: CMakeLists.txt  SimpleBackend.cpp  SimpleBackend.h  simple_backend.cpp  simple_backend_test.cpp  test_main.cpp
